# rules_ts

e2e/image/: BUILD.bazel  WORKSPACE  js_image_layer.bzl  package.json  pnpm-lock.yaml  tsconfig.json
e2e/image/app/: BUILD.bazel  main.ts
e2e/image/lib1/: BUILD.bazel  index.ts
ts/private/: ts_project_worker.js
ts/test/ts_project_worker/: fstree.test.js
