load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_package(
    name = "node_modules/@oqton/lib1",
    src = "//lib1",
    visibility = ["//visibility:public"],
)

# Link all direct dependencies in pnpm-lock.yaml in bazel-bin/node_modules.
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)
